# bootstrapping-tool

./: ACKNOWLEDGEMENT.md  README.md  example.env  pyproject.toml  requirements.txt  run.sh
.github/workflows/: code-style.yml
src/dsw_bootstrapper/: app.py  config.py  db.py  logic.py  models.py  schemas.py
src/dsw_bootstrapper/static/: scripts.js
src/dsw_bootstrapper/templates/: index.html.j2  layout.html.j2
